--- a/app/src/main/res/layout/activity_ventana_leyes_2.xml
+++ b/app/src/main/res/layout/activity_ventana_leyes_2.xml
@@ -30,36 +30,29 @@
             app:layout_constraintVertical_bias="0.952"
             tools:layout_editor_absoluteX="0dp">
 
-            <Button
-                android:id="@+id/aprende_ventanaLeyes2"
+            <Space
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="60dp"
-                android:layout_weight="1"
-                android:background="@drawable/round"
-                android:paddingLeft="30dp"
-                android:paddingRight="30dp"
-                android:text="Aprende"
-                android:textColor="#fff"
-                app:backgroundTint="#CDB4DB" />
-
-            <Space
-                android:layout_width="10dp"
-                android:layout_height="1dp"
                 android:layout_weight="1" />
 
             <Button
-                android:id="@+id/practica_ventanaLeyes2"
-                android:layout_width="wrap_content"
+                android:id="@+id/aprende_ventanaLeyes2"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="60dp"
                 android:layout_weight="1"
                 android:background="@drawable/round"
                 android:paddingLeft="30dp"
                 android:paddingRight="30dp"
-                android:text="Practica"
+                android:text="Descubre"
                 android:textColor="#fff"
                 app:backgroundTint="@color/color2" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
