--- a/app/src/main/res/layout/fragment_cultura_sorda.xml
+++ b/app/src/main/res/layout/fragment_cultura_sorda.xml
@@ -24,12 +24,13 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-        <androidx.cardview.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/signlanguage"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:layout_margin="16dp"
-                app:cardBackgroundColor="@color/color2"
+                app:cardBackgroundColor="#CDB4DB"
+
                 app:cardCornerRadius="20dp">
 
                 <RelativeLayout
@@ -45,7 +46,7 @@
                         android:layout_gravity="start"
                         android:layout_marginEnd="191dp"
                         android:layout_marginRight="191dp"
-                        android:src="@drawable/lenguasenas1" />
+                        android:src="@drawable/culturasordalenguadesenas" />
 
                     <TextView
                         android:layout_width="180dp"
@@ -59,10 +60,11 @@
                         android:layout_marginRight="-2dp"
                         android:text="\nLengua de Señas"
                         android:textColor="#000000"
-                        android:textSize="20sp"
+                        android:textSize="18.5sp"
                         android:textStyle="italic" />
 
                     <TextView
+                        android:textColor="#353535"
                         android:layout_width="179dp"
                         android:layout_height="150dp"
                         android:layout_alignParentEnd="true"
@@ -74,7 +76,8 @@
                         android:layout_marginBottom="-1dp"
                         android:text="\n¡Un poco de historia!
                         \nNunca está de más saber un poco del proceso de
-                        desarrollo de esta lengua"/>
+                        desarrollo de esta lengua."
+                        android:textSize="13.5sp"/>
 
 
                 </RelativeLayout>
@@ -85,7 +88,8 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_margin="16dp"
-            app:cardBackgroundColor="#CDB4DB"
+
+            app:cardBackgroundColor="#dbae9e"
             app:cardCornerRadius="20dp">
 
             <RelativeLayout
@@ -101,7 +105,7 @@
                     android:layout_gravity="start"
                     android:layout_marginEnd="191dp"
                     android:layout_marginRight="191dp"
-                    android:src="@drawable/mazo" />
+                    android:src="@drawable/mazoleyes" />
 
                 <TextView
                     android:layout_width="180dp"
@@ -115,10 +119,11 @@
                     android:layout_marginRight="-2dp"
                     android:text="\nLeyes"
                     android:textColor="#000000"
-                    android:textSize="20sp"
+                    android:textSize="18.5sp"
                     android:textStyle="italic" />
 
                 <TextView
+                    android:textColor="#353535"
                     android:layout_width="179dp"
                     android:layout_height="150dp"
                     android:layout_alignParentEnd="true"
@@ -128,9 +133,9 @@
                     android:layout_marginEnd="0dp"
                     android:layout_marginRight="0dp"
                     android:layout_marginBottom="-1dp"
+                    android:textSize="13.5sp"
                     android:text="\nAprende un poco de las leyes que existen en
-                    Colombia para velar por los
-                    derechos de las personas con discapacidad auditiva"/>
+                    Colombia para velar por los derechos de las personas con discapacidad auditiva."/>
 
 
             </RelativeLayout>
