--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -20,13 +20,13 @@
 
         <ImageView
             android:id="@+id/imageView7"
-            android:layout_width="240dp"
-            android:layout_height="240dp"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
             app:layout_constraintBottom_toBottomOf="@+id/progressBar"
             app:layout_constraintEnd_toEndOf="@+id/progressBar"
             app:layout_constraintStart_toStartOf="@+id/progressBar"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ofmanoconcirculo" />
+            app:srcCompat="@drawable/progressimage" />
 
         <ProgressBar
             android:id="@+id/progressBar"
@@ -148,9 +148,11 @@
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@+id/progressBar"
             app:layout_constraintEnd_toEndOf="@+id/progressBar"
+            app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="@+id/progressBar"
             app:layout_constraintTop_toTopOf="@+id/progressBar"
-            app:layout_constraintVertical_bias="0.504" />
+            app:layout_constraintVertical_bias="0.571" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline1"
             android:layout_width="wrap_content"
